test/fails/bad_functions/return_type2.lgl
type a is float[2];

a f(float[2] x) {
    return x; // No downcasting in return
}

void main() {
    return;
}